tests/compile-fail/wrong_arg_count.ori
// Test that wrong argument count is detected
// Spec: 09-expressions.md ยง Function Calls
// Design: 02-syntax/02-functions.md ยง Call Syntax
//
// Function calls must provide the correct number of arguments.

@add (a: int, b: int) -> int = a + b

#[compile_fail("function `add` expects 2 arguments")]
@test_wrong_arg_count () -> void = run(
    let result = add(a: 1),
    ()
)
